--- a/src/index.css
+++ b/src/index.css
@@ -1,41 +1,51 @@
-body {
-  background: linear-gradient(
-      to right top,
-      #0e1b2f,
-      #0c1f33,
-      #092337,
-      #06273a,
-      #032b3d
-    )
-    no-repeat center center/cover;
-  height: 100vh;
-  color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-align: center;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.counter_text {
-  font-size: 2em;
-  text-align: center;
-  margin: 2em;
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: rgb(38, 38, 38);
+  color: rgb(222, 222, 222);
+}
+
+h1 {
+  margin-bottom: 2rem;
+  text-transform: uppercase;
+}
+
+form {
+  padding: 2rem;
+  width: 60%;
+}
+
+input {
+  height: 3rem;
+  margin-bottom: 2rem;
+  font-size: 1.3rem;
+  width: 70%;
+}
+
+li{
+  margin-bottom: 1rem;
+  border-bottom: 1px solid grey;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  overflow-y: visible;
+  overflow-wrap: break-word;
+}
+
+p {
+  font-size: 1.5rem;
+  width: 50%;
 }
 
 button {
-  background-color: white;
-  padding: 1em 2em;
-  margin: 1em;
-  border: none;
-  border-radius: 2px;
-  -webkit-border-radius: 2px;
-  -moz-border-radius: 2px;
-  -ms-border-radius: 2px;
-  -o-border-radius: 2px;
+  float: right;
+}
+
+.line-through {
+  text-decoration: line-through;
 }
